# edgemon

./: .editorconfig  .gitignore  .prettierignore  LibreHardwareMonitor.ps1  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  upx-tauri.sh  vite.config.ts
desktop/: nsis.conf.json  package.json  pnpm-lock.yaml  tauri.conf.json  upx-tauri.sh
desktop/resources/: LibreHardwareMonitor.ps1  edgemon.config.json
desktop/src/: main.rs
src/: index.css  index.html  index.tsx  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
